Completed credit risk resampling code

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -10,15 +10,14 @@
     "\n",
     "## Instructions:\n",
     "\n",
-    "This challenge consists of the following subsections:\n",
+    "This challenge consists of the following sections:\n",
     "\n",
-    "* Split the Data into Training and Testing Sets\n",
+    "1. Split the Data into Training and Testing Sets\n",
+    "2. Create a Logistic Regression Model with the Original Data\n",
+    "3. Predict a Logistic Regression Model with Resampled Training Data \n",
+    "4. Write a Credit Risk Analysis Report\n",
     "\n",
-    "* Create a Logistic Regression Model with the Original Data\n",
-    "\n",
-    "* Predict a Logistic Regression Model with Resampled Training Data \n",
-    "\n",
-    "### Split the Data into Training and Testing Sets\n",
+    "### Part 1: Split the Data into Training and Testing Sets\n",
     "\n",
     "Open the starter code notebook and then use it to complete the following steps.\n",
     "\n",
@@ -32,7 +31,7 @@
     "\n",
     "4. Split the data into training and testing datasets by using `train_test_split`.\n",
     "\n",
-    "### Create a Logistic Regression Model with the Original Data\n",
+    "### Part 2: Create a Logistic Regression Model with the Original Data\n",
     "\n",
     "Employ your knowledge of logistic regression to complete the following steps:\n",
     "\n",
@@ -50,7 +49,7 @@
     "\n",
     "4. Answer the following question: How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "### Predict a Logistic Regression Model with Resampled Training Data\n",
+    "### Part 3. Predict a Logistic Regression Model with Resampled Training Data\n",
     "\n",
     "Did you notice the small number of high-risk loan labels? Perhaps, a model that uses resampled data will perform better. You’ll thus resample the training data and then reevaluate the model. Specifically, you’ll use `RandomOverSampler`.\n",
     "\n",
@@ -70,7 +69,7 @@
     "    \n",
     "4. Answer the following question: How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "### Write a Credit Risk Analysis Report\n",
+    "### Part 4: Write a Credit Risk Analysis Report\n",
     "\n",
     "For this section, you’ll write a brief report that includes a summary and an analysis of the performance of both machine learning models that you used in this challenge. You should write this report as the `README.md` file included in your GitHub repository.\n",
     "\n",
@@ -95,7 +94,7 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "from sklearn.metrics import balanced_accuracy_score\n",
-    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
     "from imblearn.metrics import classification_report_imbalanced\n",
     "\n",
     "import warnings\n",
@@ -113,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Split the Data into Training and Testing Sets"
+    "## Part 1: Split the Data into Training and Testing Sets"
    ]
   },
   {
@@ -235,17 +234,16 @@
        "4                 1       23000            0  "
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Read the CSV file from the Resources folder into a Pandas DataFrame\n",
-    "# YOUR CODE HERE!\n",
+    "df_lending_data = pd.read_csv('Resources/lending_data.csv')\n",
     "\n",
     "# Review the DataFrame\n",
-    "# YOUR CODE HERE!"
+    "display(df_lending_data.head())"
    ]
   },
   {
@@ -263,11 +261,11 @@
    "source": [
     "# Separate the data into labels and features\n",
     "\n",
-    "# Separate the y variable, the labels\n",
-    "# YOUR CODE HERE!]\n",
+    "# Separate the y variable, the targets\n",
+    "targets = df_lending_data['loan_status']\n",
     "\n",
     "# Separate the X variable, the features\n",
-    "# YOUR CODE HERE!"
+    "features = df_lending_data[['loan_size', 'interest_rate', 'borrower_income', 'debt_to_income', 'num_of_accounts', 'derogatory_marks', 'total_debt']]"
    ]
   },
   {
@@ -286,14 +284,13 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# Review the y variable Series\n",
-    "# YOUR CODE HERE!"
+    "# Review the y variable / targets Series\n",
+    "display(targets.head())"
    ]
   },
   {
@@ -402,14 +399,13 @@
        "4                 1       23000  "
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Review the X variable DataFrame\n",
-    "# YOUR CODE HERE!"
+    "display(features.head())"
    ]
   },
   {
@@ -438,8 +434,8 @@
     }
    ],
    "source": [
-    "# Check the balance of our target values\n",
-    "# YOUR CODE HERE!"
+    "# Check the balance of our target values / y variable\n",
+    "targets.value_counts()"
    ]
   },
   {
@@ -460,7 +456,7 @@
     "\n",
     "# Split the data using train_test_split\n",
     "# Assign a random_state of 1 to the function\n",
-    "# YOUR CODE HERE!"
+    "x_train, x_test, y_train, y_test = train_test_split(features, targets)"
    ]
   },
   {
@@ -474,7 +470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Logistic Regression Model with the Original Data"
+    "## Part 2: Create a Logistic Regression Model with the Original Data"
    ]
   },
   {
@@ -506,10 +502,24 @@
     "\n",
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "logistic_regression_model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using training data\n",
-    "# YOUR CODE HERE!"
+    "logistic_regression_model.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Generate predictions from the model we just fit\n",
+    "# predictions = logistic_regression_model.predict(X_train)\n",
+    "\n",
+    "# # Convert those predictions (and actual values) to a DataFrame\n",
+    "# results_df = pd.DataFrame({\"Prediction\": predictions, \"Actual\": y_train['loan_status']})\n",
+    "# results_df"
    ]
   },
   {
@@ -521,12 +531,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "test_prediction = logistic_regression_model.predict(x_test)"
    ]
   },
   {
@@ -536,31 +546,8 @@
     "### Step 3: Evaluate the model’s performance by doing the following:\n",
     "\n",
     "* Calculate the accuracy score of the model.\n",
-    "\n",
     "* Generate a confusion matrix.\n",
-    "\n",
     "* Print the classification report."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9520479254722232"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Print the balanced_accuracy score of the model\n",
-    "# YOUR CODE HERE!"
    ]
   },
   {
@@ -569,20 +556,17 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[18663,   102],\n",
-       "       [   56,   563]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The balanced accurace score is: 0.9470647571823748\n"
+     ]
     }
    ],
    "source": [
-    "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
+    "# Print the balanced_accuracy_score of the model\n",
+    "lending_data_BAS = balanced_accuracy_score(y_test, test_prediction)\n",
+    "print(f'The balanced accurace score is: {lending_data_BAS}')"
    ]
   },
   {
@@ -594,19 +578,52 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The confusion matrix is:\n",
+      "[[18682   104]\n",
+      " [   60   538]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate a confusion matrix for the model\n",
+    "lending_data_CM = confusion_matrix(y_test, test_prediction)\n",
+    "print(f'The confusion matrix is:\\n{lending_data_CM}')\n",
+    "\n",
+    "# array([[18663,   102],\n",
+    "#        [   56,   563]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The classification report is:\n",
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "          0       1.00      0.99      0.91      1.00      0.95      0.91     18765\n",
-      "          1       0.85      0.91      0.99      0.88      0.95      0.90       619\n",
+      "          0       1.00      0.99      0.90      1.00      0.95      0.90     18786\n",
+      "          1       0.84      0.90      0.99      0.87      0.95      0.89       598\n",
       "\n",
-      "avg / total       0.99      0.99      0.91      0.99      0.95      0.91     19384\n",
+      "avg / total       0.99      0.99      0.90      0.99      0.95      0.90     19384\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "lending_data_CR = classification_report_imbalanced(y_test, test_prediction)\n",
+    "print(f'The classification report is:\\n{lending_data_CR}')\n",
+    "\n",
+    "#                    pre       rec       spe        f1       geo       iba       sup\n",
+    "\n",
+    "#           0       1.00      0.99      0.91      1.00      0.95      0.91     18765\n",
+    "#           1       0.85      0.91      0.99      0.88      0.95      0.90       619\n",
+    "\n",
+    "# avg / total       0.99      0.99      0.91      0.99      0.95      0.91     19384"
    ]
   },
   {
@@ -636,7 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predict a Logistic Regression Model with Resampled Training Data"
+    "## Part 3: Predict a Logistic Regression Model with Resampled Training Data"
    ]
   },
   {
@@ -648,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,33 +674,30 @@
     "\n",
     "# Instantiate the random oversampler model\n",
     "# # Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "random_oversampler = RandomOverSampler(random_state=1)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "# YOUR CODE HERE!"
+    "x_resampled, y_resampled = random_oversampler.fit_resample(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1    56271\n",
-       "0    56271\n",
-       "Name: loan_status, dtype: int64"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1    56250\n",
+      "0    56250\n",
+      "Name: loan_status, dtype: int64\n"
+     ]
     }
    ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
-    "# YOUR CODE HERE!"
+    "print(y_resampled.value_counts())"
    ]
   },
   {
@@ -695,19 +709,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instantiate the Logistic Regression model\n",
     "# Assign a random_state parameter of 1 to the model\n",
-    "# YOUR CODE HERE!\n",
+    "resample_model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "# YOUR CODE HERE!\n",
+    "resample_model.fit(x_resampled, y_resampled)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "# YOUR CODE HERE!"
+    "y_pred = resample_model.predict(x_test)\n"
    ]
   },
   {
@@ -725,60 +739,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9936781215845847"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Print the balanced_accuracy score of the model \n",
-    "# YOUR CODE HERE!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[18649,   116],\n",
-       "       [    4,   615]])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Generate a confusion matrix for the model\n",
-    "# YOUR CODE HERE!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The balanced accurace score is: 0.9944308488460238\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the balanced_accuracy score of the model \n",
+    "resampled_lending_data_BAS = balanced_accuracy_score(y_test, y_pred)\n",
+    "print(f'The balanced accurace score is: {resampled_lending_data_BAS}')\n",
+    "\n",
+    "# 0.9936781215845847"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The confusion matrix is:\n",
+      "[[18671   115]\n",
+      " [    3   595]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate a confusion matrix for the model\n",
+    "resampled_lending_data_CM = confusion_matrix(y_test, y_pred)\n",
+    "print(f'The confusion matrix is:\\n{resampled_lending_data_CM}')\n",
+    "\n",
+    "# array([[18649,   116],\n",
+    "#       [    4,   615]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The classification report is:\n",
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "          0       1.00      0.99      0.99      1.00      0.99      0.99     18765\n",
-      "          1       0.84      0.99      0.99      0.91      0.99      0.99       619\n",
+      "          0       1.00      0.99      0.99      1.00      0.99      0.99     18786\n",
+      "          1       0.84      0.99      0.99      0.91      0.99      0.99       598\n",
       "\n",
       "avg / total       0.99      0.99      0.99      0.99      0.99      0.99     19384\n",
       "\n"
@@ -787,7 +804,15 @@
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "# YOUR CODE HERE!"
+    "resampled_lending_data_CR = classification_report_imbalanced(y_test, y_pred)\n",
+    "print(f'The classification report is:\\n{resampled_lending_data_CR}')\n",
+    "\n",
+    "#                    pre       rec       spe        f1       geo       iba       sup\n",
+    "# \n",
+    "#           0       1.00      0.99      0.99      1.00      0.99      0.99     18765\n",
+    "#           1       0.84      0.99      0.99      0.91      0.99      0.99       619\n",
+    "# \n",
+    "# avg / total       0.99      0.99      0.99      0.99      0.99      0.99     19384"
    ]
   },
   {
