--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -262,10 +262,10 @@
     "# Separate the data into labels and features\n",
     "\n",
     "# Separate the y variable, the targets\n",
-    "targets = df_lending_data['loan_status']\n",
+    "y_targets = df_lending_data['loan_status']\n",
     "\n",
     "# Separate the X variable, the features\n",
-    "features = df_lending_data[['loan_size', 'interest_rate', 'borrower_income', 'debt_to_income', 'num_of_accounts', 'derogatory_marks', 'total_debt']]"
+    "x_features = df_lending_data[['loan_size', 'interest_rate', 'borrower_income', 'debt_to_income', 'num_of_accounts', 'derogatory_marks', 'total_debt']]"
    ]
   },
   {
@@ -290,7 +290,7 @@
    ],
    "source": [
     "# Review the y variable / targets Series\n",
-    "display(targets.head())"
+    "display(y_targets.head())"
    ]
   },
   {
@@ -405,7 +405,7 @@
    ],
    "source": [
     "# Review the X variable DataFrame\n",
-    "display(features.head())"
+    "display(x_features.head())"
    ]
   },
   {
@@ -435,7 +435,7 @@
    ],
    "source": [
     "# Check the balance of our target values / y variable\n",
-    "targets.value_counts()"
+    "y_targets.value_counts()"
    ]
   },
   {
@@ -456,7 +456,7 @@
     "\n",
     "# Split the data using train_test_split\n",
     "# Assign a random_state of 1 to the function\n",
-    "x_train, x_test, y_train, y_test = train_test_split(features, targets)"
+    "train_x_features, test_x_features, train_y_targets, test_y_targets = train_test_split(x_features, y_targets, random_state=1)"
    ]
   },
   {
@@ -505,21 +505,7 @@
     "logistic_regression_model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using training data\n",
-    "logistic_regression_model.fit(x_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Generate predictions from the model we just fit\n",
-    "# predictions = logistic_regression_model.predict(X_train)\n",
-    "\n",
-    "# # Convert those predictions (and actual values) to a DataFrame\n",
-    "# results_df = pd.DataFrame({\"Prediction\": predictions, \"Actual\": y_train['loan_status']})\n",
-    "# results_df"
+    "logistic_regression_model.fit(train_x_features, train_y_targets)"
    ]
   },
   {
@@ -531,12 +517,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make a prediction using the testing data\n",
-    "test_prediction = logistic_regression_model.predict(x_test)"
+    "test_y_pred = logistic_regression_model.predict(test_x_features)"
    ]
   },
   {
@@ -552,6 +538,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The balanced accurace score is: 0.9520479254722232\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print the balanced_accuracy_score of the model\n",
+    "lending_data_BAS = balanced_accuracy_score(test_y_targets, test_y_pred)\n",
+    "print(f'The balanced accurace score is: {lending_data_BAS}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -559,14 +564,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The balanced accurace score is: 0.9470647571823748\n"
+      "The confusion matrix is:\n",
+      "[[18663   102]\n",
+      " [   56   563]]\n"
      ]
     }
    ],
    "source": [
-    "# Print the balanced_accuracy_score of the model\n",
-    "lending_data_BAS = balanced_accuracy_score(y_test, test_prediction)\n",
-    "print(f'The balanced accurace score is: {lending_data_BAS}')"
+    "# Generate a confusion matrix for the model\n",
+    "lending_data_CM = confusion_matrix(test_y_targets, test_y_pred)\n",
+    "print(f'The confusion matrix is:\\n{lending_data_CM}')"
    ]
   },
   {
@@ -578,52 +585,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The confusion matrix is:\n",
-      "[[18682   104]\n",
-      " [   60   538]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Generate a confusion matrix for the model\n",
-    "lending_data_CM = confusion_matrix(y_test, test_prediction)\n",
-    "print(f'The confusion matrix is:\\n{lending_data_CM}')\n",
-    "\n",
-    "# array([[18663,   102],\n",
-    "#        [   56,   563]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
       "The classification report is:\n",
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "          0       1.00      0.99      0.90      1.00      0.95      0.90     18786\n",
-      "          1       0.84      0.90      0.99      0.87      0.95      0.89       598\n",
+      "          0       1.00      0.99      0.91      1.00      0.95      0.91     18765\n",
+      "          1       0.85      0.91      0.99      0.88      0.95      0.90       619\n",
       "\n",
-      "avg / total       0.99      0.99      0.90      0.99      0.95      0.90     19384\n",
+      "avg / total       0.99      0.99      0.91      0.99      0.95      0.91     19384\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "lending_data_CR = classification_report_imbalanced(y_test, test_prediction)\n",
-    "print(f'The classification report is:\\n{lending_data_CR}')\n",
-    "\n",
-    "#                    pre       rec       spe        f1       geo       iba       sup\n",
-    "\n",
-    "#           0       1.00      0.99      0.91      1.00      0.95      0.91     18765\n",
-    "#           1       0.85      0.91      0.99      0.88      0.95      0.90       619\n",
-    "\n",
-    "# avg / total       0.99      0.99      0.91      0.99      0.95      0.91     19384"
+    "lending_data_CR = classification_report_imbalanced(test_y_targets, test_y_pred)\n",
+    "print(f'The classification report is:\\n{lending_data_CR}')"
    ]
   },
   {
@@ -639,7 +615,9 @@
    "source": [
     "**Question:** How well does the logistic regression model predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** WRITE YOUR ANSWER HERE!"
+    "**Answer:**\n",
+    "\n",
+    "- *The logistic regression model does pretty well, overall it's ~95% accuracy. Precision for healthy loans is 100%, and 85% for high-risk loans. Recall is at 99% for healthy loans and 91% for high-risk loans.*"
    ]
   },
   {
@@ -665,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,27 +655,27 @@
     "random_oversampler = RandomOverSampler(random_state=1)\n",
     "\n",
     "# Fit the original training data to the random_oversampler model\n",
-    "x_resampled, y_resampled = random_oversampler.fit_resample(x_train, y_train)"
+    "resampled_x_features, resampled_y_targets = random_oversampler.fit_resample(train_x_features, train_y_targets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1    56250\n",
-      "0    56250\n",
+      "0    56271\n",
+      "1    56271\n",
       "Name: loan_status, dtype: int64\n"
      ]
     }
    ],
    "source": [
     "# Count the distinct values of the resampled labels data\n",
-    "print(y_resampled.value_counts())"
+    "print(resampled_y_targets.value_counts())"
    ]
   },
   {
@@ -709,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,10 +696,10 @@
     "resample_model = LogisticRegression(random_state=1)\n",
     "\n",
     "# Fit the model using the resampled training data\n",
-    "resample_model.fit(x_resampled, y_resampled)\n",
+    "resample_model.fit(resampled_x_features, resampled_y_targets)\n",
     "\n",
     "# Make a prediction using the testing data\n",
-    "y_pred = resample_model.predict(x_test)\n"
+    "resampled_y_pred = resample_model.predict(test_x_features)"
    ]
   },
   {
@@ -739,28 +717,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The balanced accurace score is: 0.9944308488460238\n"
+      "The balanced accurace score is: 0.9936781215845847\n"
      ]
     }
    ],
    "source": [
     "# Print the balanced_accuracy score of the model \n",
-    "resampled_lending_data_BAS = balanced_accuracy_score(y_test, y_pred)\n",
-    "print(f'The balanced accurace score is: {resampled_lending_data_BAS}')\n",
-    "\n",
-    "# 0.9936781215845847"
+    "resampled_lending_data_BAS = balanced_accuracy_score(test_y_targets, resampled_y_pred)\n",
+    "print(f'The balanced accurace score is: {resampled_lending_data_BAS}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -768,23 +744,20 @@
      "output_type": "stream",
      "text": [
       "The confusion matrix is:\n",
-      "[[18671   115]\n",
-      " [    3   595]]\n"
+      "[[18649   116]\n",
+      " [    4   615]]\n"
      ]
     }
    ],
    "source": [
     "# Generate a confusion matrix for the model\n",
-    "resampled_lending_data_CM = confusion_matrix(y_test, y_pred)\n",
-    "print(f'The confusion matrix is:\\n{resampled_lending_data_CM}')\n",
-    "\n",
-    "# array([[18649,   116],\n",
-    "#       [    4,   615]])"
+    "resampled_lending_data_CM = confusion_matrix(test_y_targets, resampled_y_pred)\n",
+    "print(f'The confusion matrix is:\\n{resampled_lending_data_CM}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -794,8 +767,8 @@
       "The classification report is:\n",
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "          0       1.00      0.99      0.99      1.00      0.99      0.99     18786\n",
-      "          1       0.84      0.99      0.99      0.91      0.99      0.99       598\n",
+      "          0       1.00      0.99      0.99      1.00      0.99      0.99     18765\n",
+      "          1       0.84      0.99      0.99      0.91      0.99      0.99       619\n",
       "\n",
       "avg / total       0.99      0.99      0.99      0.99      0.99      0.99     19384\n",
       "\n"
@@ -804,15 +777,8 @@
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "resampled_lending_data_CR = classification_report_imbalanced(y_test, y_pred)\n",
-    "print(f'The classification report is:\\n{resampled_lending_data_CR}')\n",
-    "\n",
-    "#                    pre       rec       spe        f1       geo       iba       sup\n",
-    "# \n",
-    "#           0       1.00      0.99      0.99      1.00      0.99      0.99     18765\n",
-    "#           1       0.84      0.99      0.99      0.91      0.99      0.99       619\n",
-    "# \n",
-    "# avg / total       0.99      0.99      0.99      0.99      0.99      0.99     19384"
+    "resampled_lending_data_CR = classification_report_imbalanced(test_y_targets, resampled_y_pred)\n",
+    "print(f'The classification report is:\\n{resampled_lending_data_CR}')"
    ]
   },
   {
@@ -828,8 +794,17 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** \n",
+    "\n",
+    "- *The overall accuracy is improved at 99%. Precision is 100% for healthy loans and 84% (a 1% drop) for high-risk loans. Recall is at 99% for healthy loans and an improved 99% (up from 91%) for high-risk loans.*"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
